--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
        <meta charset="utf-8">
        <title> My Life </title>
 
-       <link rel="stylesheet" href="style.css">
+       <link rel="stylesheet" href="style.css?v=1.0">
        <!-- CSS only -->
        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
        <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -40,9 +40,14 @@
               <ul>
                   <br>
                   <br>
+                  <br>
+                  <br>
                   <li>Test1</li>
+                  <br>
                   <li>Test2</li>
+                  <br>
                   <li>Test3</li>
+                  <br>
                   <li>Test4</li>
               </ul>
           </div>
