--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
        <meta charset="utf-8">
        <title> My Life </title>
 
-       <link rel="stylesheet" href="style.css?v=1.0">
+       <link rel="stylesheet" href="style.css?v=1.1">
        <!-- CSS only -->
        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
        <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -58,7 +58,7 @@
             Contact Me
           </div>
           <div class="d-flex justify-content-center">
-            <a href="https:/mail.google.com/?view=cm&fs=1&to=skyeo0704@gmail.com">
+            <a href="https://www.instagram.com/sikaiyeo/">
               <img src="Gmail Icon.png" class="contact-me-icon">
           </div>
       </div>
